# FederatedLearning_Autoencoder_IDS

./: README.md  pyproject.toml
Dataset_Preparation/: README.md
Python_FL_Model/: README.md
Python_FL_Model/if_and_auto2/: __init__.py  client_app.py  dataset_load.py  pyproject.toml  server_app.py  task.py
Python_FL_Model/src/: client_app.py  dataset_load.py  task.py
