# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Python_FL_Model"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "wandb>=0.17.8",
    "scikit-learn",
    "numpy",
    "pandas",
    "psutil"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "k"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "src.server_app:app"
clientapp = "src.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 50
fraction-train = 1
local-epochs = 3
lr = 5e-4
mu = 0.1
input-dim = 67
which_dataset = 1
# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 9 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 4

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<insert your IP>"
insecure = true  # Remove this line to enable TLS
#options.num-supernodes = 2

# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup

[superlink.embedded-federation]
address = "<insert your IP>" # ControlAPI of your SUPERLINK
insecure = true

[superlink.local-deployment]
address = "<insert your IP>"
insecure = true